# libpicasso

./: .gitignore  CMakeLists.txt  COPYING  README.md
cmake/: picasso-config.cmake.in
example/: CMakeLists.txt
example/src/: main.cpp
include/: pica.hpp  picasso.hpp
include/picasso/: FileClass.h  maestro_opcodes.h  picasso.h  types.h
source/: picasso_assembler.cpp  picasso_frontend.cpp  picasso_library.cpp
source/private/: FileClass.h  maestro_opcodes.h  picasso.h  types.h
